# VulkanShit

./: .gitignore  CMakeLists.txt  README.md  diligent  imgui.ini  readme.md
shaders/: main.frag  main.vert
src/: camera.hpp  imguishit.hpp  main.cpp  shader.cpp  shader.hpp  utils.hpp  world.cpp  world.hpp
